# Bark

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bc_ant_3leg.yaml  env_ant_3leg.yaml  env_go1_3leg.yaml  imitation_go1.yaml  ppo_ant_3leg.yaml  ppo_ant_3leg_amp.yaml  ppo_go1_3leg.yaml  prosthetic_rl_go1.yaml  supervised_go1.yaml
data/: __init__.py  jacket_loader.py  reference_trajectory.py
diagrams/: 01_problem_decomposition.mmd  02_full_pipeline.mmd  03_observation_contract.mmd  04_teacher_student_architecture.mmd  05_data_generation.mmd  06_supervised_vs_rl.mmd  07_real_world_deployment.mmd  08_project_evolution.mmd
docs/: SIM_TO_REAL.md  STUDENT_PIPELINE.md
envs/: __init__.py  amp_wrapper.py  bark_ant_3leg.py  bark_go1_3leg.py  prosthetic_env.py  scenario_library.py
evaluate/: compare.py  visualize_hybrid.py
external_teachers/: __init__.py  quadruped_rl.py
legacy/: DATA.TXT  DATA_sample.TXT  analyze_dog_legs.py
legacy/Acquisition/: acquisition.ino  calibration.ino
legacy/Acquisition/just_print/: just_print.ino
postpro/: __init__.py  compare_runs.py  export_markdown_pdf.py  generate_interview_assets.py  load_logs.py  metrics.py  policy_analysis.py  render_students.py  render_teacher.py  report.py  run_all.py
pretrained/: README.md  load_teacher.py
scripts/: __init__.py  get_go1_model.py  jacket_to_reference.py  run_dog_viz.py  visualize_training.py
train/: __init__.py  amp.py  callbacks.py  generate_teacher_data.py  run_full_experiment.py  train_il.py  train_prosthetic_rl.py  train_rl.py  train_supervised.py
(+6 files in other folders)
